@@ -1,0 +1,5 @@
+package com.gentics.diktyo.index;
+
+public class Index {
+
+}
