@@ -1,0 +1,5 @@
+package com.gentics.diktyo.wrapper;
+
+public interface WrappedTransaction {
+
+}
